Fix spacing.

--- a/style.css
+++ b/style.css
@@ -60,10 +60,12 @@ header a:hover {
 
 .day-period.past {
     color: #6A8C65; /* Default grey for past dates */
+    font-size: 20px; /* Adjust period size */
   }
   
   .day-period.today {
     color: #A4D99C; /* Bright color for "today" */
+    font-size: 20px; /* Adjust period size */
     font-weight: bold; /* Make it bold to stand out, optional */
     animation: pulse 1.2s infinite; /* Pulse every 1.2 seconds, repeat infinitely */
   }
@@ -86,6 +88,7 @@ header a:hover {
 
 .day-period.future {
     color: #A4D99C; /* Lighter grey for future dates */
+    font-size: 20px; /* Adjust period size */
   }
 
 .day-title {
